refactor query command into sea-eagle, related style fixes